Fixed header breaking on mobile

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -113,6 +113,10 @@ body {
   margin-right: 10px;
 }
 
+.mr-5 {
+  margin-right: 5px;
+}
+
 .m-0 {
   margin: 0 !important;
 }
